k8s/local/moviebets-postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: moviebets-postgres
spec:
  serviceName: moviebets-postgres
  replicas: 1
  selector:
    matchLabels:
      app: moviebets-postgres
  template:
    metadata:
      labels:
        app: moviebets-postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_USER
              value: postgres
            - name: POSTGRES_PASSWORD
              value: dbpass
            - name: PGDATA
              value: "/var/lib/postgresql/data/pgdata"
            - name: PGTZ
              value: "Europe/Amsterdam"
            - name: BET_DB_USER
              value: "bettingdbuser"
            - name: BET_DB_PASSWORD
              value: "dbpass"
            - name: BET_DB_NAME
              value: "bettingdb"
            - name: CUSTOMER_DB_USER
              value: "customerdbuser"
            - name: CUSTOMER_DB_PASSWORD
              value: "dbpass"
            - name: CUSTOMER_DB_NAME
              value: "customerdb"
            - name: MARKET_DB_USER
              value: "marketdbuser"
            - name: MARKET_DB_PASSWORD
              value: "dbpass"
            - name: MARKET_DB_NAME
              value: "marketdb"
          image: $CONTAINER_REGISTRY/moviebets-postgres:$VERSION
          name: moviebets-postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data  # Default data path for PostgreSQL
          resources: {}
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: moviebets-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: moviebets-postgres
spec:
  selector:
    app: moviebets-postgres
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  type: LoadBalancer
