k8s/local/movievotes-mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: movievotes-mongodb
spec:
  serviceName: movievotes-mongodb
  replicas: 1
  selector:
    matchLabels:
      app: movievotes-mongodb
  template:
    metadata:
      labels:
        app: movievotes-mongodb
    spec:
      containers:
        - name: movievotes-mongodb
          image: mongo:8.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
          resources: {}
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "mongosh --quiet --eval 'db.adminCommand({ ping: 1 })'"
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "mongosh --quiet --eval 'db.adminCommand({ ping: 1 })'"
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 20
      restartPolicy: Always
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: movievotes-mongodb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: movievotes-mongodb
spec:
  selector:
    app: movievotes-mongodb
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  type: ClusterIP
